iniciando hateoas